[package]
name = "splunk"
version = "0.1.1-alpha1"
edition = "2021"
description = "Splunk client implementation"
license = "MIT"
documentation = "https://github.com/yaleman/splunk-rs"
repository = "https://github.com/yaleman/splunk-rs"
homepage = "https://github.com/yaleman/splunk-rs"

[features]
test_ci = [] # Used when in CI mode, to skip tests
search = []
default = ["search", "hec"]
hec = []
xml_raw = [] # This enables functions which we haven't worked out how to parse the XML...

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
futures-util = "0.3.27"
lazy_static = "1.4.0"
log = "0.4.17"
reqwest = { version = "0.11.15", features = ["json", "stream", "cookies", "gzip", "async-compression"] }
serde = { version = "1.0.158", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.94"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tokio = { version = "1.26.0", features = ["macros"]}
tokio-stream = { version = "0.1.12", features = ["io-util"] }
tokio-util = { version = "0.7.7", features = ["io-util", "futures-io"] }

[dev-dependencies]
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }

