[package]
name = "splunk"
version = "0.1.1-alpha8"
edition = "2021"
description = "Splunk client implementation supporting HEC and REST APIs"
license = "MIT"
documentation = "https://yaleman.github.io/splunk-rs/splunk/"
repository = "https://github.com/yaleman/splunk-rs"
homepage = "https://github.com/yaleman/splunk-rs"

[features]
cli = ["clap"]
test_ci = []   # Used when in CI mode, to skip tests

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "splunk_file_to_hec"
path = "src/bin/file_to_hec.rs"
required-features = ["cli"]

[[bin]]
name = "splunk_pipe_to_hec"
path = "src/bin/pipe_to_hec.rs"
required-features = ["cli"]

[dependencies]
async-trait = "0.1.74"
bytes = "1.5.0"
clap = { version = "4.2.1", features = ["derive", "env"], optional = true }
futures = "0.3.27"
futures-util = "0.3.27"
log = "0.4.17"
reqwest = { version = "^0.12", features = [
    "json",
    "stream",
    "cookies",
    "gzip",
] }
serde = { version = "1.0.158", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.94"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.12", features = ["io-util"] }
tokio-util = { version = "0.7.7", features = ["io-util", "futures-io"] }
tracing = "0.1.41"
urlencoding = "2.1.3"
